cluster/apps/networking-system/external/incus/endpoints.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.26.1-standalone-strict/endpoints-v1.json
apiVersion: v1
kind: Endpoints
metadata:
  name: incus
subsets:
  - addresses:
      - ip: ${CONFIG_NFS_SERVER_IP_ADDRESS}
    ports:
      - name: https
        port: 8443
        protocol: TCP
