cluster/apps/networking-system/external/incus/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: incus
spec:
  hostnames: ["incus.${SECRET_DOMAIN_0}"]
  parentRefs:
    - name: internal
      namespace: networking-system
      port: 443
  rules:
    - backendRefs:
        - name: incus
          port: 8443
