cluster/apps/networking-system/external/incus/ingress.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.26.1-standalone-strict/ingress-networking-v1.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: incus
  labels:
    app.kubernetes.io/name: incus
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"  # the default 60 seconds timeout is annoying when using the web interface
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "off"
    nginx.ingress.kubernetes.io/whitelist-source-range: |
      10.244.0.0/16,10.10.0.0/24,192.168.50.0/24,192.168.10.0/24,192.168.200.0/24
spec:
  ingressClassName: nginx
  rules:
    - host: &host incus.${SECRET_DOMAIN_0}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: incus
                port:
                  number: 8443
  tls:
    - hosts:
        - *host
      secretName: ${SECRET_DOMAIN_0//./-}-prod-tls
